<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.mi.showcase.InsertDataActivity"
    tools:showIn="@layout/activity_insert_data">

    <ProgressBar
        android:id="@+id/savingProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="invisible" />

    <ScrollView
        android:id="@+id/savingScroller"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbars="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/deviceNameInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/deviceName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/deviceName" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/androidNameInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/deviceNameInputLayout"
                android:layout_marginTop="5dp">

                <EditText
                    android:id="@+id/androidName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/androidName" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/carrierInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/androidNameInputLayout"
                android:layout_marginTop="5dp">

                <EditText
                    android:id="@+id/carrier"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/carrierET" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:id="@+id/versionAndTargetLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/carrierInputLayout"
                android:layout_marginTop="5dp"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/versionInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/version"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/version_no"
                        android:inputType="numberDecimal" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/targetInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/target"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/target"
                        android:inputType="numberDecimal" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/codeNameAndDistroLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/versionAndTargetLayout"
                android:layout_marginTop="5dp"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/codeNameInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/codeName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/codeName" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/distributionInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/distribution"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/distributionET"
                        android:inputType="numberDecimal" />
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/percentage_mark"
                    android:textAlignment="textEnd" />
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/remarkInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/codeNameAndDistroLayout"
                android:layout_marginTop="5dp">

                <EditText
                    android:id="@+id/remark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/snippet"
                    android:inputType="textMultiLine" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/imageUrlInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/remarkInputLayout"
                android:layout_marginTop="5dp">

                <EditText
                    android:id="@+id/imageUrl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/imageUrl"
                    android:inputType="textUri" />
            </android.support.design.widget.TextInputLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
